--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
        
        <section id="header">
-          <a href="#"><img src="images/logo.png" class="logo" alt=""></a>
+          <a href="#"><img src="https://i.postimg.cc/wxfSkRQN/logo.png" class="logo" alt=""></a>
          <div>
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
@@ -43,27 +43,27 @@
 
     <section id="feature" class="section-p1">
         <div class="fe-box">
-            <img src="images/f1.png" alt="">
+            <img src="https://i.postimg.cc/PJGyRDDC/f1.png" alt="">
             <h6>Free Shipping</h6>
         </div>
         <div class="fe-box">
-            <img src="images/f2.png" alt="">
+            <img src="https://i.postimg.cc/FsCdF4PZ/f2.png" alt="">
             <h6>Online Order</h6>
         </div>
         <div class="fe-box">
-            <img src="images/f3.png" alt="">
+            <img src="https://i.postimg.cc/fbp1MJXN/f3.png" alt="">
             <h6>Save Money</h6>
         </div>
         <div class="fe-box">
-            <img src="images/f4.png" alt="">
+            <img src="https://i.postimg.cc/CKksf1XY/f4.png" alt="">
             <h6>Promotions</h6>
         </div>
         <div class="fe-box">
-            <img src="images/f5.png" alt="">
+            <img src="https://i.postimg.cc/Bv01kC79/f5.png" alt="">
             <h6>Happy Sell</h6>
         </div>
         <div class="fe-box">
-            <img src="images/f6.png" alt="">
+            <img src="https://i.postimg.cc/DZzm3pqD/f6.png" alt="">
             <h6>F24/7 Support</h6>
         </div>
 
@@ -74,7 +74,7 @@
         <p>Summer Collection New Morden Design</p>
         <div class="pro-container">
             <div class="pro">
-                <img src="new/image9.jpg" alt="">
+                <img src="https://i.postimg.cc/hvzLct9H/image9.jpg" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -90,7 +90,7 @@
                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="new/image7.jpg" alt="">
+                <img src="https://i.postimg.cc/tT6SD4dH/image26.avif" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -106,7 +106,7 @@
                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="new/image8.jpg" alt="">
+                <img src="https://i.postimg.cc/GmhzLGGX/image8.jpg" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -122,7 +122,7 @@
                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/shirt4.jpg" alt="">
+                <img src="https://i.postimg.cc/ryZXfQrV/image10.avif" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -138,7 +138,7 @@
                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/shirt5.jpg" alt="">
+                <img src="https://i.postimg.cc/kGRmQbwF/image11.jpg" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -154,7 +154,7 @@
                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/shirt6.jpg" alt="">
+                <img src="https://i.postimg.cc/bwSdLZVJ/image19.jpg" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -170,7 +170,7 @@
                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/shirt7.jpg" alt="">
+                <img src="https://i.postimg.cc/YS1P6x1x/image20.jpg" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -186,7 +186,7 @@
                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/shirt8.jpg" alt="">
+                <img src="https://i.postimg.cc/V6FnWJGT/image21.avif" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -216,7 +216,7 @@
         <p>Summer Collection New Morden Design</p>
         <div class="pro-container">
             <div class="pro">
-                <img src="images/shirt9.jpg" alt="">
+                <img src="https://i.postimg.cc/MGfMnYFZ/image22.jpg" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -232,7 +232,7 @@
                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/shirt10.jpg" alt="">
+                <img src="https://i.postimg.cc/02r85y3P/image13.jpg" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -248,7 +248,7 @@
                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/shirt11.jpg" alt="">
+                <img src="https://i.postimg.cc/8cmwqGRY/image14.avif" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -264,7 +264,7 @@
                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/shirt12.jpg" alt="">
+                <img src="https://i.postimg.cc/DmVFYqc6/image23.jpg" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -280,7 +280,7 @@
                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/shirt13.jpg" alt="">
+                <img src="https://i.postimg.cc/vm5PW51M/image16.jpg" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -291,12 +291,12 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                      </div>
-                     <h4>$78/h4>
+                     <h4>$78</h4>
                 </div>
                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/shirt14.jpg" alt="">
+                <img src="https://i.postimg.cc/tCY775f1/image17.jpg" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -312,7 +312,7 @@
                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/shirt15.jpg" alt="">
+                <img src="https://i.postimg.cc/Bbxg930F/image25.jpg" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -328,7 +328,7 @@
                <a href="#"><i class="fal fa-shopping-cart cart"></i></a>
             </div>
             <div class="pro">
-                <img src="images/shirt16.jpg" alt="">
+                <img src="https://i.postimg.cc/qqsv8bs0/image27.jpg" alt="">
                 <div class="des">
                      <span>adidas</span>
                      <h5>Cartoon Astronaut T-shirts</h5>
@@ -394,7 +394,7 @@
 
     <footer class="section-p1">
        <div class="col">
-        <img src="images/logo.png" alt="" class="logo logo1">
+        <img src="https://i.postimg.cc/wxfSkRQN/logo.png" alt="" class="logo logo1">
         <h4>Contact</h4>
         <p><strong>Address:</strong> 1-7-195/12/2 Sri Nager Colony,Suryapet,Telangana</p>
         <p><strong>Cell:</strong>(+91) 8096109572</p>
@@ -432,11 +432,11 @@
             <h4>Install App</h4>
             <p>From App Store or Google Play</p>
             <div class="row">
-                <img src="images/app1.jpg" alt="">
-                <img src="images/app2.jpg" alt="">
+                <img src="https://i.postimg.cc/NfVqYxYs/app1.jpg" alt="" class="Store">
+                <img src="https://i.postimg.cc/cLgK4TnX/app2.jpg" alt="" class="Store">
             </div>
             <p>Secure Payment Gateways</p>
-            <img src="images/pay.png" alt="">
+            <img src="https://i.postimg.cc/CK6SBVp8/app3.jpg" alt="" class="pay">
        </div>
 
        <div class="copyright">
